--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -85,7 +85,7 @@ jobs:
       - name: Run Service
         uses: nikosch86/github-action-eks-kubectl@main
         with:
-          command: "apply -f kubernetes/tech-challenge-service.yaml"
+          command: "apply -f kubernetes/tech-challenge-service.yaml.bkppp"
         env:
           EKS_CLUSTER: ${{ env.EKS_CLUSTER }}
 
